--- a/slackCopy-ios/slackCopy-ios/Base.lproj/Main.storyboard
+++ b/slackCopy-ios/slackCopy-ios/Base.lproj/Main.storyboard
@@ -1,24 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Reveal View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SWRevealViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="SWRevealViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <segue destination="2Nh-qi-apS" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="8WU-1b-PWi"/>
+                        <segue destination="C2a-Sy-YvQ" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="asg-lJ-o42"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="71" y="107"/>
+        </scene>
+        <!--ChannelVC-->
+        <scene sceneID="fKp-BQ-hYr">
+            <objects>
+                <viewController id="2Nh-qi-apS" customClass="channelVC" customModule="slackCopy_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Z1o-g5-c2x">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="CAS-XU-8Kl"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5qg-4Q-jhp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1033" y="-151"/>
+        </scene>
+        <!--ChatVC-->
+        <scene sceneID="gQo-cx-k56">
+            <objects>
+                <viewController id="C2a-Sy-YvQ" customClass="chatVC" customModule="slackCopy_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kxJ-Ok-CfL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KJY-Hf-2ML">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QWW-Ej-etc">
+                                        <rect key="frame" x="12" y="47" width="24" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="24" id="R8O-bx-nvP"/>
+                                            <constraint firstAttribute="height" constant="18" id="tgp-Rk-SRJ"/>
+                                        </constraints>
+                                        <state key="normal" image="smackBurger"/>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="codemania.id" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fFp-Vp-mVb">
+                                        <rect key="frame" x="136" y="45.5" width="102.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.29019607843137252" green="0.30196078431372547" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="fFp-Vp-mVb" firstAttribute="centerX" secondItem="KJY-Hf-2ML" secondAttribute="centerX" id="ANF-6K-3lV"/>
+                                    <constraint firstItem="fFp-Vp-mVb" firstAttribute="centerY" secondItem="QWW-Ej-etc" secondAttribute="centerY" id="BwD-J7-MU2"/>
+                                    <constraint firstAttribute="height" constant="77" id="BxC-b7-K2Y"/>
+                                    <constraint firstAttribute="bottom" secondItem="QWW-Ej-etc" secondAttribute="bottom" constant="12" id="hLu-QK-LjR"/>
+                                    <constraint firstItem="QWW-Ej-etc" firstAttribute="leading" secondItem="KJY-Hf-2ML" secondAttribute="leading" constant="12" id="hOz-uy-ZpB"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="KJY-Hf-2ML" firstAttribute="trailing" secondItem="uZX-w8-oV3" secondAttribute="trailing" id="3x0-oN-lKg"/>
+                            <constraint firstItem="KJY-Hf-2ML" firstAttribute="leading" secondItem="uZX-w8-oV3" secondAttribute="leading" id="BMl-hC-dMi"/>
+                            <constraint firstItem="KJY-Hf-2ML" firstAttribute="top" secondItem="kxJ-Ok-CfL" secondAttribute="top" id="tLA-8N-52W"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="uZX-w8-oV3"/>
+                    </view>
+                    <connections>
+                        <outlet property="menuBtn" destination="QWW-Ej-etc" id="DNu-6g-r0j"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zrg-C8-hGJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1032.8" y="537.48125937031489"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="smackBurger" width="40" height="40"/>
+    </resources>
 </document>
